--- a/songr/build.gradle
+++ b/songr/build.gradle
@@ -13,10 +13,14 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.5.5'
-	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.5'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools:2.5.5'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.5'
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	runtimeOnly 'org.postgresql:postgresql'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	
 }
 
 test {
