--- a/songr/src/main/resources/application.properties
+++ b/songr/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+## default connection pool
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
 
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:8090/albums
+spring.datasource.username=rawan
+spring.datasource.password=0000
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=false
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.type=trace
+
+#drop n create table again, good for testing, comment this in production
+
+spring.jpa.hibernate.ddl-auto=create
